Change image source from foto.jpg to foto.jpeg

--- a/carta.html
+++ b/carta.html
@@ -101,7 +101,7 @@ p {
 
     <!-- FOTO DE ELLA -->
     <div class="foto">
-        <img src="foto.jpg" alt="Mi amor">
+        <img src="foto.jpeg" alt="Mi amor">
     </div>
 
     <!-- CARTA -->
